--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "universal-quick-actions",
+  "name": "quickbeam",
   "version": "1.0.0",
-  "description": "Intelligent text selection tool that recognizes patterns and provides context-sensitive actions",
+  "description": "QuickBeam - Intelligent text selection tool that recognizes patterns and provides context-sensitive actions",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:prod": "tsc --skipLibCheck && vite build",
     "postbuild": "cp src/popup/popup.html dist/ && cp src/options/options.html dist/ && rm -rf dist/src dist/index.js dist/index.js.map",
     "build:watch": "vite build --watch",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx}",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "node --max-old-space-size=4096 node_modules/.bin/jest",
+    "test:watch": "node --max-old-space-size=4096 node_modules/.bin/jest --watch",
+    "test:coverage": "node --max-old-space-size=4096 node_modules/.bin/jest --coverage",
+    "test:ci": "node --max-old-space-size=4096 node_modules/.bin/jest --ci --coverage --watchAll=false",
+    "test:unit": "node --max-old-space-size=4096 node_modules/.bin/jest tests/unit",
+    "test:integration": "node --max-old-space-size=4096 node_modules/.bin/jest tests/integration",
+    "test:memory": "node --max-old-space-size=8192 node_modules/.bin/jest --runInBand --detectOpenHandles",
     "prepare": "husky"
   },
   "keywords": [
@@ -23,10 +29,11 @@
     "quick-actions",
     "pattern-recognition"
   ],
-  "author": "Universal Quick Actions Team",
+  "author": "QuickBeam Team",
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "^0.0.260",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
@@ -34,8 +41,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^16.1.5",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.19"
   },
